Fix for mobile gallery and quote overflow on mobile

--- a/frontend/src/Components/Carousel/CarouselGallery.css
+++ b/frontend/src/Components/Carousel/CarouselGallery.css
@@ -189,7 +189,7 @@ html, body {
   .intro-quote.mobile {
     display: block;
     width: 100%;
-    margin: 50px 50px 50px 50px;
+    margin: 10px 50px 50px 50px;
     overflow-x: hidden;
     overflow: hidden;
     
@@ -207,7 +207,7 @@ html, body {
     height: auto;
     max-height: 1000px;
     width: 100%;
-    margin: 50px 50px 50px 50px; /* Ensure the margin is appropriate */
+    margin: auto; /* Ensure the margin is appropriate */
     display: inline-block;
   }
 }
@@ -229,13 +229,13 @@ html, body {
     height: auto;
     max-height: 1000px;
     width: 100%;
-    margin: 20px 20px 20px 50px; /* Ensure the margin is appropriate */
+    margin: 20px 50px 0px 50px; /* Ensure the margin is appropriate */
     display: inline-block;
   }
   .intro-quote.mobile {
     display: block;
     width: 100%;
-    margin: 50px 50px 50px 50px;
+    margin: auto;
     overflow-x: hidden;
     overflow: hidden;
     
